# mruby-lite

./: CMakeLists.txt  LICENSE  c_as_cxx.cpp.in
include/: mrbconf.h.in
mrbgems/: mrbgem.c.in  mrbgems.c.in
mrblib/: mrblib.c.in
